# math-server

./: .gitignore  LICENSE  README.md  database.txt  main.go  server.go  startup.sh
clients/: calc_client.go  chat_client_1.go  chat_client_2.go  chat_client_3.go  chat_functions.go  data.txt  dataCalc.txt  dataReady.txt  demo_client.go  post_client.go
clients/c++_client/: CMakeLists.txt  post_client.cpp
clients/c++_client/src/: calc_client.cpp  common.cpp  common.h  post_client.cpp
clients/cpp_func/: calc.cpp  func.cpp  result.cpp
database/: setup-commands.sql
